[tool.poetry]
name = "template-x"
version = "0.1.0"
description = "Create project templates for any programming language in minutes, with just an idea."
authors = ["Ajinkya Indulkar <26824103+ajndkr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "template_x"}]
repository = "https://www.github.com/ajndkr/template-x"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
langchain = "^0.0.123"
openai = "^0.27.2"
tiktoken = "^0.3.2"

[tool.poetry.scripts]
template-x = "template_x.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
