[tool.poetry]
name = "boilerplate-x"
version = "0.2.2"
description = "Create project boilerplate for any programming language in minutes, with just an idea."
authors = ["Ajinkya Indulkar <26824103+ajndkr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "boilerplate_x"}]
repository = "https://www.github.com/ajndkr/boilerplate-x"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
langchain = "^0.0.123"
openai = "^0.27.2"
tiktoken = "^0.3.2"
pygithub = "^1.58.1"
gitpython = "^3.1.31"
rich = "^13.3.3"

[tool.poetry.scripts]
boilerplate-x = "boilerplate_x.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
